# igo

./: .gitignore  README.md  igo.cabal
src/Game/: Go.hs
src/Game/Go/: Board.hs  Game.hs  Monad.hs  Rules.hs  Simple.hs
