name:                igo
version:             0.0.0.0
synopsis:            Rules and utilities relating to the game of go
description:         This package aims to provide a comprehensive set of rules
                     and utilities for dealing with the game of go.  It allows
                     you to track a game and make queries of the board, taking
                     into account the various rulesets in play.

                     What this package does not provide is any sort of
                     artificial intelligence to actually /play/ go, but it is
                     hoped that it would prove useful in writing one.
homepage:            http://github.com/dpwright/igo
license:             BSD3
license-file:        LICENSE
author:              Daniel P. Wright
maintainer:          dani@dpwright.com
copyright:           Copyright (c) 2014 Daniel P. Wright
category:            Game
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type:                git
  location:            git://github.com/dpwright/igo.git

library
  exposed-modules:     Game.Go
                       Game.Go.Game
                       Game.Go.Board
                       Game.Go.Rules
                       Game.Go.Monad
                       Game.Go.Simple
  hs-source-dirs:      src
  build-depends:       base ==4.6.*,
                       array >= 0.4.0.1,
                       repa ==3.2.*,
                       vector == 0.10.*,
                       containers == 0.5.*,
                       random == 1.0.*,
                       mtl >= 2.1.2
